SEOBNR: Hd agrees with LALSuite.  Hs remains to fix.

--- a/in_progress/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -1111,13 +1111,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sigmacoeffTerm2=-4.799107823366251e-03\n",
-      "sigmastarcoeffTerm2 = 2.928954268442338e-03\n",
+      "r=2.129681018601393e+01\n",
+      "invrho2 = 2.204808172638273e-03\n",
+      "w2 = 4.535543052725575e+02\n",
+      "deltaT = 4.109888854728293e+02\n",
+      "deltaT_r = 4.059191890082149e+01\n",
+      "invdeltaT = 2.433155823300508e-03\n",
+      "invLambda = 4.861177807274609e-06\n",
       "\n",
-      "Deltasigmastar3=2.093022277294561e-04\n",
-      "Deltasigmastar2 = -1.688295698952585e-04\n",
-      "Deltasigmastar1 = 1.060247616435915e-04\n",
-      "Hreal = 2.633470780176605e+01\n"
+      "nur=2.427863578335583e-03\n",
+      "mur = -2.275847240035503e-03\n",
+      "HsoTerm2a=-2.121006424772315e-01\n",
+      "HsoTerm2b = 1.426900687432991e+00\n",
+      "HsoTerm2c = 5.929446047734496e-02\n",
+      "\n",
+      "HsoTerm1=-1.848259603038153e-13\n",
+      "HsoTerm2 = 1.155505584478414e+00\n",
+      "HsoTerm2coeff = 4.100553574874055e-06\n",
+      "\n",
+      "Hss=-2.701121311492129e-07\n",
+      "Hso = 4.738212370393936e-06\n",
+      "\n",
+      "Hs=4.468100239244723e-06\n",
+      "Hreal = 2.633470989218627e+01\n"
      ]
     }
    ],
