SEOBNR: add temporary validation block to Hamiltonian notebook so we can be sure that we don't break the Hamiltonian again!

--- a/in_progress/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {
     "scrolled": false
    },
@@ -1180,6 +1180,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "extraterm=5.121162223548163e-09\n",
+      "dSS = 1.261873764525631e+01\n",
+      "eta = 2.112029384756657e-01\n",
+      "u = 4.695538868335886e-02\n",
+      "S1x = 4.857667584940312e-03\n",
+      "S2x = 3.673094582185491e-03\n",
+      "Heff = 9.775297740929915e-01\n",
+      "0.9952429072947244\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Temporary validation code block: all hard-coded values from LALSuite!\n",
+    "Hreal_valid = Hreal = Ham.compute_Hreal(23., 10., EMgamma, 1, -7.966696593617955e+01, 1.261873764525631e+01,\n",
+    "                          2.129681018601393e+01, 0.000000000000000e+00, 0.000000000000000e+00,\n",
+    "                          0.000000000000000e+00, 2.335391115580442e-01, -4.235164736271502e-22,\n",
+    "                          4.857667584940312e-03, 9.715161660389764e-03, -1.457311842632286e-02,\n",
+    "                          3.673094582185491e-03, -4.591302628615413e-03, 5.509696538546906e-03)\n",
+    "print(Hreal_valid)\n",
+    "if(np.abs(Hreal_valid-9.952429072947245e-01)>1e-14):\n",
+    "    print(\"ERROR. You have broken the Hamiltonian computation!\")\n",
+    "    sys.exit(1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1200,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1308,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1362,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,21 +1584,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'SEOBNR.nqc_interp' has no attribute 'domain'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-bb97b8ff5498>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mflux\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mfa1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minterp1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnqi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdomain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnqi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma1Range\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'cubic'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mfa2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minterp1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnqi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdomain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnqi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma2Range\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'cubic'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mfa3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minterp1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnqi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdomain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnqi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma3Range\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'cubic'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'SEOBNR.nqc_interp' has no attribute 'domain'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The following populates a matrix T_{lm} of resummed leading-order logarithms of tail effects\n",
     "deltam = (m1 - m2)/(m1 + m2)\n",
