--- a/in_progress/Tutorial-SEOBNR_Documentation.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Documentation.ipynb
@@ -190,22 +190,14 @@
     "    H_{\\rm real} = M \\sqrt{ 1 + 2 \\eta \\left( \\frac{ H_{\\rm eff} }{ \\mu } - 1 \\right) }.\n",
     "\\end{equation*}\n",
     "\n",
-    "Here $H_{\\rm eff}$ (defined in [this cell](#heff)) is an *effective* Hamiltonian (see [this cell](#intro)) and $M$ (defined in [this cell](#m)), $\\mu$ (defined in [this cell](#mu)), and $\\eta$ (defined in [this cell](#eta)) are constants determined by $m_{1}$ and $m_{2}$.  Note that for agreement with LALSuite, we omit the factor of $M$ in our code."
+    "Here $H_{\\rm eff}$ (defined in [this cell](#heff)) is an *effective* Hamiltonian (see [this cell](#intro)) and $M$ (defined in [this cell](#m)), $\\mu$ (defined in [this cell](#mu)), and $\\eta$ (defined in [this cell](#eta)) are constants determined by $m_{1}$ and $m_{2}$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting SEOBNR/Hamiltonian-Hreal_on_top.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "Hreal = sp.sqrt(1 + 2*eta*(Heff - 1))"
@@ -233,19 +225,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to SEOBNR/Hamiltonian-Hreal_on_top.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "Heff = Hs + Hns - Hd + dSS*eta*u**4*(S1x*S1x + S1y*S1y + S1z*S1z + S2x*S2x + S2y*S2y + S2z*S2z)\n"
+    "Heff = Hs + Hns - Hd + dSS*eta*u*u*u*u*(S1x*S1x + S1y*S1y + S1z*S1z + S2x*S2x + S2y*S2y + S2z*S2z)"
    ]
   },
   {
@@ -1658,7 +1642,6 @@
     "S1 = Sstar1\n",
     "S2 = Sstar2\n",
     "S3 = Sstar3\n",
-    "\n",
     "Sstar1 = sigmastar1 + Deltasigmastar1\n",
     "Sstar2 = sigmastar2 + Deltasigmastar2\n",
     "Sstar3 = sigmastar3 + Deltasigmastar3"
@@ -1821,7 +1804,7 @@
     "\n",
     "sigmastarcoeffTerm2 = eta/(72*r*r)*(706 + r*(-206*Qminus1 + 282*DrSipn2 + r*Qminus1*(96*DrSipn2 - 23*Qminus1))\n",
     "                                    + eta*(-54 + r*(120*Qminus1 - 324*DrSipn2\n",
-    "                                                        + r*(360*DrSipn2**2 + Qminus1*(-126*DrSipn2 - 3*Qminus1)))))"
+    "                                                        + r*(360*DrSipn2*DrSipn2 + Qminus1*(-126*DrSipn2 - 3*Qminus1)))))"
    ]
   },
   {
@@ -1973,8 +1956,8 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "sigmacoeffTerm2 = eta/(144*r**2)*(-896 + r*(-436*Qminus1 - 96*DrSipn2 + r*(-45*Qminus1**2 + 36*Qminus1*DrSipn2))\n",
-    "                                 + eta*(-336 + r*(204*Qminus1 - 882*DrSipn2 + r*(810*DrSipn2**2\n",
+    "sigmacoeffTerm2 = eta/(144*r*r)*(-896 + r*(-436*Qminus1 - 96*DrSipn2 + r*(-45*Qminus1*Qminus1 + 36*Qminus1*DrSipn2))\n",
+    "                                 + eta*(-336 + r*(204*Qminus1 - 882*DrSipn2 + r*(810*DrSipn2*DrSipn2\n",
     "                                                                                 - 234*Qminus1*DrSipn2))))"
    ]
   },
@@ -2283,7 +2266,7 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "Lambdatprm = 4*(a**2 + r**2)*r - 2*a**2*Deltatprm*sin2theta"
+    "Lambdatprm = 4*(a*a + r*r)*r - 2*a*a*Deltatprm*sin2theta"
    ]
   },
   {
@@ -3219,7 +3202,7 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "Deltatprm = 2*r*Deltau + r**2*Deltauprm"
+    "Deltatprm = 2*r*Deltau + r*r*Deltauprm"
    ]
   },
   {
@@ -3302,8 +3285,8 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "Deltaubarprm = -2*a**2*u**3 - 2*u**2/(etaKminus1)\n",
-    "Deltaubar = a**2*u**2 + (2*u + 1/etaKminus1)/etaKminus1"
+    "Deltaubarprm = -2*a*a*u*u*u - 2*u*u/(etaKminus1)\n",
+    "Deltaubar = a*a*u*u + (2*u + 1/etaKminus1)/etaKminus1"
    ]
   },
   {
@@ -3358,7 +3341,7 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "Deltaucalibprm = -eta*u**2*(Delta1 + u*(2*Delta2 + u*(3*Delta3\n",
+    "Deltaucalibprm = -eta*u*u*(Delta1 + u*(2*Delta2 + u*(3*Delta3\n",
     "                            + u*(4*Delta4 + u*(5*(Delta5 + Delta5l*sp.log(u)))))))/(1 + logarg)\n",
     "Deltaucalib = 1 + eta*(Delta0 + sp.log(1 + logarg))\n",
     "logarg = u*(Delta1 + u*(Delta2 + u*(Delta3 + u*(Delta4 + u*(Delta5 + Delta5l*sp.log(u))))))"
@@ -3408,20 +3391,20 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "Delta5l = etaKminus1**2*64./5.\n",
-    "Delta5 = etaKminus1**2*((sp.Rational(-4237,60) + sp.Rational(128,5)*gamma + sp.Rational(2275,512)*sp.pi**2\n",
-    "                         - sp.Rational(1,3)*a**2*(Delta1**3 - 3*Delta1*Delta2 + 3*Delta3)\n",
-    "                         - (Delta1**5 - 5*Delta1**3*Delta2 + 5*Delta1*Delta2**2 + 5*Delta1**2*Delta3\n",
-    "                            - 5*Delta2*Delta3 - 5*Delta1*Delta4)/(5*etaKminus1**2) + (Delta1**4\n",
-    "                            - 4*Delta1**2*Delta2 + 2*Delta2**2 + 4*Delta1*Delta3 - 4*Delta4)/(2*etaKminus1)\n",
+    "Delta5l = etaKminus1*etaKminus1*64./5.\n",
+    "Delta5 = etaKminus1*etaKminus1*((sp.Rational(-4237,60) + sp.Rational(128,5)*gamma + sp.Rational(2275,512)*sp.pi*sp.pi\n",
+    "                         - sp.Rational(1,3)*a*a*(Delta1*Delta1*Delta1 - 3*Delta1*Delta2 + 3*Delta3)\n",
+    "                         - (Delta1*Delta1*Delta1*Delta1*Delta1 - 5*Delta1*Delta1*Delta1*Delta2 + 5*Delta1*Delta2*Delta2 + 5*Delta1*Delta1*Delta3\n",
+    "                            - 5*Delta2*Delta3 - 5*Delta1*Delta4)/(5*etaKminus1*etaKminus1) + (Delta1*Delta1*Delta1*Delta1\n",
+    "                            - 4*Delta1*Delta1*Delta2 + 2*Delta2*Delta2 + 4*Delta1*Delta3 - 4*Delta4)/(2*etaKminus1)\n",
     "                        + sp.Rational(256,5)*sp.log(2)))\n",
-    "Delta4 = sp.Rational(1,12)*(6*a**2*(Delta1**2 - 2*Delta2)*etaKminus1**2 + 3*Delta1**4 - 8*etaKminus1*Delta1**3\n",
-    "                           -12*Delta2*Delta1**2 + 12*(2*etaKminus1*Delta2 + Delta3)*Delta1\n",
-    "                           + 12*(sp.Rational(94,3) - sp.Rational(41,32)*sp.pi**2)*etaKminus1**2\n",
-    "                           + 6*(Delta2**2 - 4*Delta3*etaKminus1))\n",
-    "Delta3 = -sp.Rational(1,3)*Delta1**3 + etaKminus1*Delta1**2 + Delta2*Delta1\n",
-    "            -2*etaKminus1*(Delta2 - etaKminus1) - a**2*etaKminus1**2*Delta1\n",
-    "Delta2 = sp.Rational(1,2)*Delta1*(Delta1 - 4*etaKminus1) - a**2*etaKminus1*etaKminus1*Delta0\n",
+    "Delta4 = sp.Rational(1,12)*(6*a*a*(Delta1*Delta1 - 2*Delta2)*etaKminus1*etaKminus1 + 3*Delta1*Delta1*Delta1*Delta1 - 8*etaKminus1*Delta1*Delta1*Delta1\n",
+    "                           -12*Delta2*Delta1*Delta1 + 12*(2*etaKminus1*Delta2 + Delta3)*Delta1\n",
+    "                           + 12*(sp.Rational(94,3) - sp.Rational(41,32)*sp.pi*sp.pi)*etaKminus1*etaKminus1\n",
+    "                           + 6*(Delta2*Delta2 - 4*Delta3*etaKminus1))\n",
+    "Delta3 = -sp.Rational(1,3)*Delta1*Delta1*Delta1 + etaKminus1*Delta1*Delta1 + Delta2*Delta1\n",
+    "            -2*etaKminus1*(Delta2 - etaKminus1) - a*a*etaKminus1*etaKminus1*Delta1\n",
+    "Delta2 = sp.Rational(1,2)*Delta1*(Delta1 - 4*etaKminus1) - a*a*etaKminus1*etaKminus1*Delta0\n",
     "Delta1 = -2*etaKminus1*(K + Delta0)\n",
     "Delta0 = K*(eta*K - 2)"
    ]
@@ -3469,16 +3452,11 @@
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
     "etaKminus1 = eta*K - 1\n",
-    "\n",
-    "#LALSuite version\n",
     "K = c20 + c21*eta + c22*(eta*eta) + c23*(eta*eta)*eta\n",
     "c20  = 1.712\n",
     "c21  = -1.803949138004582\n",
     "c22  = -39.77229225266885\n",
-    "c23  = 103.16588921239249\n",
-    "\n",
-    "#BB2010 version\n",
-    "K = 1.4467*(1 - 4*eta)*(1 - 4*eta) + 4*(1 - 2*eta)*eta"
+    "c23  = 103.16588921239249"
    ]
   },
   {
