SEOBNR: Run partial derivative routines with Hamstring.txt since that is trusted.  Run Hamiltonian notebook from initial condition notebook if that hasn't already been done.

--- a/in_progress/Tutorial-SEOBNR_Documentation.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Documentation.ipynb
@@ -45,34 +45,7 @@
     "* [Barausse and Buonanno (2011)](https://arxiv.org/abs/1107.2904) as BB2011,\n",
     "* [Pan, Buonanno, Buchman, et. al. 2010](https://arxiv.org/abs/0912.3466v2) as P2010,\n",
     "* [Taracchini, Pan, Buonanno, et al (2012)](https://arxiv.org/abs/1202.0790) as T2012, and\n",
-    "* [Damour, Jaranowski, and Schaefer (2000)](https://arxiv.org/abs/gr-qc/0005034) as D2000.\n",
-    "\n",
-    "### Preliminaries\n",
-    "We begin by checking that the SEOBNR subdirectory exists, which is where NRPy codes for generating SEOBNR waveforms are stored."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys, os.path\n",
-    "\n",
-    "# If the desired subdirectory for SEOBNR Python codes does not exist, create it!\n",
-    "# TYLERK: Once this notebook is fully documented and validated, double-check that\n",
-    "# we still need sys.path.append and import sys since the notebook will be moved.\n",
-    "# Also double-check if we need to check for the SEOBNR subdirectory; it may be\n",
-    "# a permanent part of the repository.\n",
-    "sys.path.append('../')\n",
-    "import cmdline_helper as cmd\n",
-    "outdir = os.path.join(\"SEOBNR/\")\n",
-    "\n",
-    "if not(os.path.exists(outdir)):\n",
-    "    print(\"Creating the %s subdirectory.\" % outdir)\n",
-    "    cmd.mkdir(outdir)\n",
-    "    with open(outdir+\"__init__.py\", \"w\") as file:\n",
-    "        file.write(\"\")"
+    "* [Damour, Jaranowski, and Schaefer (2000)](https://arxiv.org/abs/gr-qc/0005034) as D2000."
    ]
   },
   {
