SEOBNR: standardize variable names across notebooks and derivative routines (e.g. px -> p1).

--- a/in_progress/Tutorial-SEOBNR_Documentation.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Documentation.ipynb
@@ -3389,7 +3389,7 @@
     "        \\Delta_{5\\ell} &= \\frac{64}{5} \\left( \\eta K - 1 \\right)^{2}.\n",
     "\\end{align*}\n",
     "\n",
-    "We define $K$ in [this cell](#k), $\\eta$ in [this cell](#eta), $a$ in [this cell](#a), and $M$ in [this cell](#m).  Note that for agreement with LALSuite, we omit the factor of $M$ in our code."
+    "We define $K$ in [this cell](#k), $\\eta$ in [this cell](#eta), $a$ in [this cell](#a), and $M$ in [this cell](#m).  Note that for agreement with LALSuite, we omit the factor of $M$ in our code.  Note that the constant $\\gamma$ is the Euler-Mascheroni, and the value is taken from the [LALSuite documentation](https://lscsoft.docs.ligo.org/lalsuite/lal/group___l_a_l_constants__h.html).  In the Python code we donote $\\gamma$ by EMgamma."
    ]
   },
   {
@@ -3409,7 +3409,7 @@
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
     "Delta5l = etaKminus1*etaKminus1*sp.Rational(64,5)\n",
-    "Delta5 = etaKminus1*etaKminus1*((sp.Rational(-4237,60) + sp.Rational(128,5)*gamma\n",
+    "Delta5 = etaKminus1*etaKminus1*((sp.Rational(-4237,60) + sp.Rational(128,5)*EMgamma\n",
     "                        + sp.Rational(2275,512)*sp.pi*sp.pi - sp.Rational(1,3)*a*a*(Delta1*Delta1*Delta1\n",
     "                        - 3*Delta1*Delta2 + 3*Delta3) - (Delta1*Delta1*Delta1*Delta1*Delta1\n",
     "                        - 5*Delta1*Delta1*Delta1*Delta2 + 5*Delta1*Delta2*Delta2 + 5*Delta1*Delta1*Delta3\n",
@@ -4379,7 +4379,7 @@
     "\n",
     "# Now reverse the expressions and write them in a function\n",
     "with open('SEOBNR/Hreal_on_bottom.py', 'w') as output:\n",
-    "    output.write(\"import numpy as np\\ndef compute_Hreal(m1=23., m2=10., gamma=0.577215664901532860606512090082402431, tortoise=1, dSO=-7.966696593617955e+01, dSS=1.261873764525631e+01, x=2.129681018601393e+01, y=0.000000000000000e+00, z=0.000000000000000e+00, p1=0.000000000000000e+00, p2=2.335391115580442e-01, p3=-4.235164736271502e-22, S1x=4.857667584940312e-03, S1y=9.715161660389764e-03, S1z=-1.457311842632286e-02, S2x=3.673094582185491e-03, S2y=-4.591302628615413e-03, S2z=5.509696538546906e-03):\\n\")\n",
+    "    output.write(\"import numpy as np\\ndef compute_Hreal(m1=23., m2=10., EMgamma=0.577215664901532860606512090082402431, tortoise=1, dSO=-7.966696593617955e+01, dSS=1.261873764525631e+01, x=2.129681018601393e+01, y=0.000000000000000e+00, z=0.000000000000000e+00, p1=0.000000000000000e+00, p2=2.335391115580442e-01, p3=-4.235164736271502e-22, S1x=4.857667584940312e-03, S1y=9.715161660389764e-03, S1z=-1.457311842632286e-02, S2x=3.673094582185491e-03, S2y=-4.591302628615413e-03, S2z=5.509696538546906e-03):\\n\")\n",
     "    for line in reversed(list(open(\"SEOBNR/Hamiltonian-Hreal_one_line_expressions.txt\"))):\n",
     "        output.write(\"\\t%s\\n\" % line.rstrip().replace(\"sp.sqrt\", \"np.sqrt\").replace(\"sp.Rational\",\n",
     "                                \"np.divide\").replace(\"sp.abs\", \"np.abs\").replace(\"sp.log\",\n",
