GiRaFFE: Editing for consistency and grammar, checking that links work.

--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -18,8 +18,6 @@
     "## Author: Patrick Nelson\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
-    "## This module solves the scalar wave equation for a plane wave in Cartesian coordinates, using the [Method of Lines](Tutorial-Method_of_Lines-C_Code_Generation.ipynb).\n",
-    "\n",
     "**Notebook Status:** <font color='green'><b>Validated</b></font>\n",
     "\n",
     "**Validation Notes:** This module will validate the routines in [Tutorial-GiRaFFE_NRPy-A2B](Tutorial-GiRaFFE_NRPy-A2B.ipynb).\n",
@@ -629,14 +627,14 @@
     "    GiRaFFE_NRPy_cons_to_prims(&params,xx,auxevol_gfs,evol_gfs);\n",
     "    GiRaFFE_NRPy_prims_to_cons(&params,xx,auxevol_gfs,evol_gfs);\n",
     "    \n",
-    "    printf(\"Checking the Poynting Fluxes:\");\n",
+    "    printf(\"Checking the Poynting Fluxes:\\n\");\n",
     "    printf(\"SDA: %.1f, %.1f, %.1f\\n\",1.0-log10(2.0*fabs(evol_gfs[IDX4S(STILDED0GF, i0,i1,i2)]-mhd_st_x[0])/(fabs(evol_gfs[IDX4S(STILDED0GF, i0,i1,i2)])+fabs(mhd_st_x[0]))),\n",
     "                                     1.0-log10(2.0*fabs(evol_gfs[IDX4S(STILDED1GF, i0,i1,i2)]-mhd_st_y[0])/(fabs(evol_gfs[IDX4S(STILDED1GF, i0,i1,i2)])+fabs(mhd_st_y[0]))),\n",
     "                                     1.0-log10(2.0*fabs(evol_gfs[IDX4S(STILDED2GF, i0,i1,i2)]-mhd_st_z[0])/(fabs(evol_gfs[IDX4S(STILDED2GF, i0,i1,i2)])+fabs(mhd_st_z[0]))));\n",
     "    //printf(\"NRPy: %.15e,%.15e,%.15e\\n\",evol_gfs[IDX4S(STILDED0GF, i0,i1,i2)],evol_gfs[IDX4S(STILDED1GF, i0,i1,i2)],evol_gfs[IDX4S(STILDED2GF, i0,i1,i2)]);\n",
     "    //printf(\"CCTK: %.15e,%.15e,%.15e\\n\",mhd_st_x[0],mhd_st_y[0],mhd_st_z[0]);\n",
     "    printf(\"\\n\\n\");\n",
-    "    printf(\"Checking the Valencia Velocities:\");\n",
+    "    printf(\"Checking the Valencia Velocities:\\n\");\n",
     "    printf(\"SDA: %.1f, %.1f, %.1f\\n\",1.0-log10(2.0*fabs(auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)]-(vx[0]+betaxL)/alphaL)/(fabs(auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)])+fabs((vx[0]+betaxL)/alphaL))),\n",
     "                                     1.0-log10(2.0*fabs(auxevol_gfs[IDX4S(VALENCIAVU1GF, i0,i1,i2)]-(vy[0]+betayL)/alphaL)/(fabs(auxevol_gfs[IDX4S(VALENCIAVU1GF, i0,i1,i2)])+fabs((vy[0]+betayL)/alphaL))),\n",
     "                                     1.0-log10(2.0*fabs(auxevol_gfs[IDX4S(VALENCIAVU2GF, i0,i1,i2)]-(vz[0]+betazL)/alphaL)/(fabs(auxevol_gfs[IDX4S(VALENCIAVU2GF, i0,i1,i2)])+fabs((vz[0]+betazL)/alphaL))));\n",
@@ -669,7 +667,7 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 0.7587532997131348 seconds.\n",
+      "Finished in 0.7364726066589355 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
@@ -680,11 +678,13 @@
       "direction; each entry therein corresponds to a component of StildeD. Each pair \n",
       "of outputs should show at least 10 significant digits of agreement. \n",
       "\n",
-      "Checking the Poynting Fluxes:SDA: 14.4, 15.4, 16.0\n",
+      "Checking the Poynting Fluxes:\n",
+      "SDA: 14.4, 15.4, 16.0\n",
       "\n",
       "\n",
-      "Checking the Valencia Velocities:SDA: 15.2, 15.3, 15.9\n",
-      "Finished in 0.19511008262634277 seconds.\n",
+      "Checking the Valencia Velocities:\n",
+      "SDA: 15.2, 15.3, 15.9\n",
+      "Finished in 0.12947940826416016 seconds.\n",
       "\n",
       "\n"
      ]
@@ -824,15 +824,15 @@
     "\\tilde{S}_i = \\alpha \\sqrt{\\gamma} T^0_{{\\rm EM}i} &= \\gamma_{ij} \\frac{(v^j + \\beta^j) \\sqrt{\\gamma}B^2}{4 \\pi \\alpha} - \\frac{\\sqrt{\\gamma}B_i (u_k B^k)}{4 \\pi \\alpha} \n",
     "\\end{align}\n",
     "\n",
-    "We note that there is an extra term here beyond the one that `GiRaFFE` uses for its P2C solver."
+    "We note that there is an extra term here beyond the one that `GiRaFFE` uses for its P2C solver. This term exists because we did not make the assumption that $(u_k B^k) = 0$, which follows from the definition of drift velocity ([see here](https://arxiv.org/pdf/1310.3274.pdf), Sec. III.A, just above Eq. 45). Making that assumption, we get the expression used in `GiRaFFE`:\n",
+    "\\begin{align}\n",
+    "\\tilde{S}_i = \\alpha \\sqrt{\\gamma} T^0_{{\\rm EM}i} &= \\gamma_{ij} \\frac{(v^j + \\beta^j) \\sqrt{\\gamma}B^2}{4 \\pi \\alpha}\n",
+    "\\end{align}\n",
+    "\n",
+    "Normally, this relation does not come into play because $u_i \\propto v_i \\propto \\tilde{S}_i$ and $\\tilde{S}_i$ is calculated initially as the cross product of the electric and magnetic fields, so is guaranteed to be orthogonal to $B^i$. Here, however, we did nothing to guarantee this beforehand, so the difference shows up. Note also that the entire derivation becomes far easier if you assume this sooner since $b^0 = 0$ and $b^i = B^i / \\left(\\sqrt{4 \\pi} \\alpha u^0\\right)$\n",
+    "\n",
+    "To resolve this issue, we add an extra function to the GRFFE module that computes $b^\\mu$ under the assumption that $u_j B^j = 0$ for use only in GRFFE codes (i.e., without GRHD). This is desirable for more than just this small case since the extra term might cause small errors to propagate."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
