GiRaFFE: Formatting improvements to unit tests. Commented out extraneous function calls in all notebooks. Revised discussion of drift velocity in C2P_P2C. Fixed orthogonalization of magnetic field in Stilde_flux.

--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -49,7 +49,8 @@
     "    1. [Step 1.e](#interface) Create dummy files for the CCTK version of the code\n",
     "1. [Step 2](#mainc): `C2P_P2C_unit_test.c`: The Main C Code\n",
     "    1. [Step 2.a](#compile_run): Compile and run the code to validate the output\n",
-    "1. [Step 3](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
+    "1. [Step 3](#drift_notes): Output this notebook to $\\LaTeX$-formatted PDF file\n",
+    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -273,7 +274,7 @@
    "outputs": [],
    "source": [
     "# Step 3.d.i: Generate declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
-    "par.generate_Cparameters_Ccodes(os.path.join(out_dir))\n",
+    "# par.generate_Cparameters_Ccodes(os.path.join(out_dir))\n",
     "\n",
     "# Step 3.d.ii: Set free_parameters.h\n",
     "with open(os.path.join(out_dir,\"free_parameters.h\"),\"w\") as file:\n",
@@ -589,12 +590,12 @@
     "    betaz[0] = betazL;\n",
     "    \n",
     "    /* Generate physically meaningful speeds */\n",
-    "    /*auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
+    "    auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    vx[0] = alphaL*auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)]-betaxL;\n",
     "    auxevol_gfs[IDX4S(VALENCIAVU1GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
     "    vy[0] = alphaL*auxevol_gfs[IDX4S(VALENCIAVU1GF, i0,i1,i2)]-betayL;\n",
     "    auxevol_gfs[IDX4S(VALENCIAVU2GF, i0,i1,i2)] = (double)rand()/RAND_MAX*2.0-1.0;\n",
-    "    vz[0] = alphaL*auxevol_gfs[IDX4S(VALENCIAVU2GF, i0,i1,i2)]-betazL;*/\n",
+    "    vz[0] = alphaL*auxevol_gfs[IDX4S(VALENCIAVU2GF, i0,i1,i2)]-betazL;\n",
     "    /* Superluminal speeds for testing */\n",
     "    /*auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)] = 1.0+(double)rand()/RAND_MAX*9.0;\n",
     "    vx[0] = alphaL*auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)]-betaxL;\n",
@@ -649,7 +650,7 @@
    "source": [
     "<a id='compile_run'></a>\n",
     "\n",
-    "## Step 2: Compile and run the code to validate the output \\[Back to [top](#toc)\\]\n",
+    "## Step 2.a: Compile and run the code to validate the output \\[Back to [top](#toc)\\]\n",
     "\n",
     "$$\\label{compile_run}$$\n",
     "\n",
@@ -667,24 +668,24 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 0.7364726066589355 seconds.\n",
+      "Finished in 0.675560474395752 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "Valencia 3-velocity: 0.0000e+00, 0.0000e+00, 0.0000e+00\n",
+      "Valencia 3-velocity: -4.5206e-02, 2.5774e-01, -2.7043e-01\n",
       "Below are the numbers we care about. These are the Significant Digits of Agreement between the \n",
       "corrected StildeD and ValenciavU as computed by NRPy+ and ETK. Each row represents a flux \n",
       "direction; each entry therein corresponds to a component of StildeD. Each pair \n",
       "of outputs should show at least 10 significant digits of agreement. \n",
       "\n",
       "Checking the Poynting Fluxes:\n",
-      "SDA: 14.4, 15.4, 16.0\n",
+      "SDA: 16.5, 15.9, 16.2\n",
       "\n",
       "\n",
       "Checking the Valencia Velocities:\n",
-      "SDA: 15.2, 15.3, 15.9\n",
-      "Finished in 0.12947940826416016 seconds.\n",
+      "SDA: 16.2, 16.7, inf\n",
+      "Finished in 0.12910985946655273 seconds.\n",
       "\n",
       "\n"
      ]
@@ -714,53 +715,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyzing what's going wrong in P2C\n",
+    "<a id='drift_notes'></a>\n",
     "\n",
-    "So far, I've managed to hand-code an expression for $\\tilde{S}_i$ that agrees with `GiRaFFE` to roundoff level precision. However we would like to use an auto-generated version, which has been validated against `IllinoisGRMHD`, but doing so eliminates the agreement, producing *very* different results. \n",
+    "## Step 3: Some notes on the drift velocity \\[Back to [top](#toc)\\]\n",
+    "$$\\label{drift_notes}$$\n",
     "\n",
-    "This is the equation used by `GiRaFFE`:\n",
+    "While we have chosen to use the Valencia three-velocity in this version of `GiRaFFE`, we have also frequently made use of a relationship expressing this in terms of the drift velocity, which was used in the original `GiRaFFE`. The usefulness of this relationship to drift velocity extends beyond merely translating the original code. As discussed in [Paschalidis, et al.](https://arxiv.org/pdf/1310.3274.pdf), Sec. III.A (just above Eq. 45, with a proof in Appendix A), there is a one-parameter family of velocity definitions that fulfill the GRFFE conditions. The drift velocity sets this parameter to 0, which minimizes the Lorentz factor and *guarantees* that the four-velocity and magnetic fields are orthogonal to each other. This simplifies the form of $b^\\mu$ and quantities that depend on it. \n",
+    "\n",
+    "This must be taken into account in developing this unit test, because NRPy+'s GRFFE module defaults to using a definition of $b^\\mu$ that does not assume that this criterion is met, while the original `GiRaFFE` code assumes this in its C2P and P2C solvers. So, if we do not guarantee that our test data fulfills this criterion, these two different routines will produce different results. We will now go through the derivation of the equation used by `GiRaFFE` from first principles to show where this extra term appears.\n",
+    "\n",
+    "This is the equation used by `GiRaFFE`, pulled from Eqs. 47 and 85 of [this paper](https://arxiv.org/abs/1310.3274):\n",
     "$$\\tilde{S}_i = \\gamma_{ij} \\frac{\\bar{v}^j \\sqrt{\\gamma}B^2}{4 \\pi},$$\n",
     "or $$\\tilde{S}_i = \\gamma_{ij} \\frac{(v^j + \\beta^j) \\sqrt{\\gamma}B^2}{4 \\pi \\alpha},$$\n",
     "where $\\bar{v}^j$ is the Valencia 3-velocity and $v^j$ is the drift velocity.\n",
     "\n",
-    "In IGM, this is used:\n",
-    "$$\\tilde{S}_i = \\alpha \\sqrt{\\gamma} T^0_{{\\rm EM}i},$$\n",
+    "In IllinoisGRMHD (IGM), the expression used is $\\tilde{S}_i = \\alpha \\sqrt{\\gamma} T^0_{{\\rm EM}i},$\n",
     "where \n",
     "\\begin{align}\n",
     "T^{\\mu\\nu}_{\\rm EM} &= b^2 u^{\\mu} u^{\\nu} + \\frac{1}{2} b^2 g^{\\mu\\nu} - b^\\mu b^\\nu \\\\\n",
     "b^0 &= \\frac{u_j B^j}{\\sqrt{4\\pi} \\alpha} \\\\\n",
     "b^i &= \\frac{B^i + (u_j B^j) u^i}{\\sqrt{4\\pi} \\alpha u^0} \\\\\n",
     "u^i &= u^0 v^i.\n",
-    "\\end{align}\n",
-    "\n",
-    "`GiRaFFE` cites [this paper](https://arxiv.org/pdf/1310.3274.pdf), specifically eqs. 47 and 85, repeated here:\n",
-    "\\begin{align}\n",
-    "v^i &= \\alpha \\frac{\\gamma^{ij} S_j}{\\mathcal{B}^2} -\\beta^{i} \\\\\n",
-    "v^i &= 4 \\pi \\alpha \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} - \\beta^{i}\n",
-    "\\end{align}\n",
-    "\n",
-    "Let's double check the process between these. By definition, $\\tilde{S}_j \\equiv S_j \\sqrt{\\gamma}$ and $\\mathcal{B}^\\mu \\equiv B^\\mu / \\sqrt{4 \\pi}$. Then $S_j = \\tilde{S}_j / \\sqrt{\\gamma}$ and $\\mathcal{B}^2 = B^2 / \\left( 4 \\pi \\right)$, and the above expressions hold. So, let's solve eq. 85 of $\\tilde{S}_i$.\n",
-    "\\begin{align}\n",
-    "v^i &= 4 \\pi \\alpha \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} - \\beta^{i} \\\\\n",
-    "v^i + \\beta^{i} &= 4 \\pi \\alpha \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} \\\\\n",
-    "\\frac{1}{4 \\pi \\alpha} \\left( v^i + \\beta^{i} \\right) &= \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} \\\\\n",
-    "\\frac{\\sqrt{\\gamma} B^2}{4 \\pi \\alpha} \\left( v^i + \\beta^{i} \\right) &= \\gamma^{ij} \\tilde{S}_j \\\\\n",
-    "\\end{align}\n",
-    "Multiply both sides by $\\gamma_{ki}$:\n",
-    "\\begin{align}\n",
-    "\\gamma_{ki} \\frac{\\sqrt{\\gamma} B^2}{4 \\pi \\alpha} \\left( v^i + \\beta^{i} \\right) &= \\gamma_{ki} \\gamma^{ij} \\tilde{S}_j \\\\\n",
-    "&= \\delta^j_k \\tilde{S}_j \\\\\n",
-    "&= \\tilde{S}_k\n",
-    "\\end{align}\n",
-    "We'll rewrite indices $i \\rightarrow j$ and $k \\rightarrow i$; then $$\\tilde{S}_i = \\gamma_{ij} \\frac{\\sqrt{\\gamma} B^2}{4 \\pi \\alpha} \\left( v^j + \\beta^{j} \\right),$$\n",
-    "which matches what is used in GiRaFFE:$$\\tilde{S}_i = \\gamma_{ij} \\frac{(v^j + \\beta^j) \\sqrt{\\gamma}B^2}{4 \\pi \\alpha}.$$"
+    "\\end{align}\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we'll work to bridge the gap between the expression in terms of the stress-energy tensor and that used in `GiRaFFE`. Consider that $T^0_{{\\rm EM}i} = g_{i \\mu} T^{0 \\mu}_{{\\rm EM}}$. We'll thus start with the index lowering operation.\n",
+    "Now, we'll work to bridge the gap between the expression in terms of the stress-energy tensor and that used in `GiRaFFE`. Consider that $T^0_{{\\rm EM}i} = g_{i \\mu} T^{0 \\mu}_{{\\rm EM}}.$ We'll thus start with the index lowering operation.\n",
     "\\begin{align}\n",
     "g_{\\mu \\xi} T^{\\xi \\nu}_{\\rm EM} &= g_{\\mu \\xi} \\left( b^2 u^{\\xi} u^{\\nu} + \\frac{1}{2} b^2 g^{\\xi\\nu} - b^\\xi b^\\nu \\right) \\\\\n",
     "&= b^2 u_{\\mu} u^{\\nu} + \\frac{1}{2} b^2 \\delta^\\nu_\\mu - b_\\mu b^\\nu.\n",
@@ -796,7 +779,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(From Paschalidis, et al..; we'll take their word on this one for now):\n",
+    "This ultimately reduces to (from Paschalidis, et al.):\n",
     "\\begin{align}\n",
     "b^2 &= \\frac{B^2 + (u_\\mu B^\\mu)^2}{4 \\pi \\alpha^2 (u^0)^2} \\\\\n",
     "\\end{align}\n",
@@ -831,7 +814,49 @@
     "\n",
     "Normally, this relation does not come into play because $u_i \\propto v_i \\propto \\tilde{S}_i$ and $\\tilde{S}_i$ is calculated initially as the cross product of the electric and magnetic fields, so is guaranteed to be orthogonal to $B^i$. Here, however, we did nothing to guarantee this beforehand, so the difference shows up. Note also that the entire derivation becomes far easier if you assume this sooner since $b^0 = 0$ and $b^i = B^i / \\left(\\sqrt{4 \\pi} \\alpha u^0\\right)$\n",
     "\n",
-    "To resolve this issue, we add an extra function to the GRFFE module that computes $b^\\mu$ under the assumption that $u_j B^j = 0$ for use only in GRFFE codes (i.e., without GRHD). This is desirable for more than just this small case since the extra term might cause small errors to propagate."
+    "To handle this more smoothly moving forward, we have added an extra function to the GRFFE module that computes $b^\\mu$ under the assumption that $u_j B^j = 0$ for use only in GRFFE codes (i.e., without GRHD). This is desirable for more than just this small case since the extra term might cause small errors to propagate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "# Step 4: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
+    "[Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.pdf](Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
  ],
